# Board-Games-project

./: .gitignore  BoardGame_Classes.h  CMakeLists.txt  Diamond_TicTacToe.cpp  Diamond_TicTacToe.h  Doxyfile  FourInARow.cpp  FourInARow.h  FourInARow_AI_Player.h  MainMenu.cpp  Memory_TicTacToe.cpp  Memory_TicTacToe.h  MisereTicTacToe.cpp  MisereTicTacToe.h  NumericalTicTacToe.cpp  NumericalTicTacToe.h  NumericalTicTacToe_Classes.cpp  NumericalTicTacToe_Classes.h  README.md  SUS_AI_Player.h  ValidatedUI.h  Word.cpp  Word.h  XO_4x4_Classes.cpp  XO_4x4_Classes.h  XO_5X5_Classes.cpp  XO_5X5_Classes.h  XO_6x6_Classes.cpp  XO_6x6_Classes.h  XO_Classes.h  index.html  infinity_XO.cpp  infinity_XO.h  obstacles_6x6_tictactoe.cpp  obstacles_6x6_tictactoe.h  obstcales_6x6_tictactoe.cpp  obstcales_6x6_tictactoe.h  pyramid_XO_Classes.cpp  sus.cpp  sus.h  (+2 more)
Games/: Diamond_TicTacToe.cpp  Diamond_TicTacToe.h  FourInARow.cpp  FourInARow.h  FourInARow_AI_Player.h  Memory_TicTacToe.cpp  Memory_TicTacToe.h  MisereTicTacToe.cpp  MisereTicTacToe.h  NumericalTicTacToe.cpp  NumericalTicTacToe.h  SUS_AI_Player.h  Word.cpp  Word.h  XO_4x4_Classes.cpp  XO_4x4_Classes.h  XO_5X5_Classes.cpp  XO_5X5_Classes.h  infinity_XO.cpp  infinity_XO.h  obstacles_6x6_tictactoe.cpp  obstacles_6x6_tictactoe.h  pyramid_XO_Classes.cpp  pyramid_XO_Classes.h  sus.cpp  sus.h  ultimate_XO_Classes.cpp  ultimate_XO_Classes.h
Project1/: CMakeLists.txt  MainMenu.cpp  MisereTicTacToe.cpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  XO_5X5_Classes.h
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project2/: MainMenu.cpp  MisereTicTacToe.cpp  XO_4x4_Classes.cpp  XO_4x4_Classes.h  obstcales_6x6_tictactoe.cpp  obstcales_6x6_tictactoe.h
